{
    "name": "PlayerInputManager",
    "maps": [
        {
            "name": "PlayerController",
            "id": "6d9dd2d7-cb83-444a-8b16-3dbebe92f5ca",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "080e406a-0384-490e-a14b-7ecfdf841428",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "d3143c6d-7671-4b80-8a82-70400a41a29d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldAttack",
                    "type": "Button",
                    "id": "fd534e6e-a291-428a-84b0-9b34bf94f0c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2cf5a875-ceed-4026-8163-ccb070138d39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldJump",
                    "type": "Button",
                    "id": "8e406c74-955b-4f34-b77d-bcd236bf1963",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32e1e6a3-65e7-4dd1-8ddb-3d169a308287",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1588de6-8ea1-4083-ab0b-00af39e0b474",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12eb5e0e-4b6b-4cee-9245-d93bd5e3d4be",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Hold",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "HoldAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e2f5fe3-fc49-4545-896e-730f662056ca",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e91761e4-b8a3-4646-9b95-b797f4710ac4",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Hold(duration=1.401298E-45)",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "HoldJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}